...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/userTasks"
        android:layout_width="354dp"
        android:layout_height="46dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/addNewTaskButton"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
        tools:text="All Tasks" />

    <ImageButton
        android:id="@+id/userSettingsImageButton"
        android:layout_width="77dp"
        android:layout_height="65dp"
        android:contentDescription="@string/user_profile"
        android:src="@drawable/icon_user_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
...
